--- a/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
+++ b/main/Quota/Quota.Integration.Test/Quota.Integration.Test.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrenciesControllerTests.cs" />
     <Compile Include="QuotesControllerTests.cs" />
+    <Compile Include="QuotationControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
