--- a/main/Quota/QuoteService/QuoteService.csproj
+++ b/main/Quota/QuoteService/QuoteService.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="IQuoteService.cs" />
     <Compile Remove="ServiceReplicaListenerFactory.cs" />
   </ItemGroup>
 
